# extinguisher

./: .gitignore  README.md  pyproject.toml  rules.md
.github/workflows/: release.yml
misc/: release_notes.md
src/xshr/: card.py  cards.py  deck.py  pile.py
