[tool.poetry]
name = "extinguisher"
version = "0.0.dev0"
description = "A card game"
authors = ["Konstantin Kolesnyak <constkolesnyak@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/constkolesnyak/extinguisher"
packages = [{ include = "xshr", from = "src" }]


[tool.poetry.dependencies]
python = "^3.11"
attrs = "^23.1.0"
bidict = "^0.22.1"
more-itertools = "^10.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.0"


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ['smoke']
addopts = "-v"

[tool.coverage.run]
omit = ["tests/*", "__init__.py"]

[tool.coverage.report]
exclude_also = ["raise NotImplementedError"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
